# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("algorithm") {
  public = [ "algorithm.h" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
}

absl_source_set("container") {
  public = [ "container.h" ]
  deps = [
    ":algorithm",
    "//flutter/third_party/abseil-cpp/absl/base:nullability",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
  ]
}

absl_test("algorithm_test") {
  sources = [ "algorithm_test.cc" ]
  deps = [
    ":algorithm",
    "//flutter/third_party/abseil-cpp/absl/base:config",
  ]
}

absl_test("container_test") {
  sources = [ "container_test.cc" ]
  deps = [
    ":container",
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/memory",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}
