# Copyright 2021 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("cleanup_internal") {
  public = [ "internal/cleanup.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:base_internal",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/utility",
  ]
  visibility = [ "//flutter/third_party/abseil-cpp/absl/*" ]
}

absl_source_set("cleanup") {
  public = [ "cleanup.h" ]
  deps = [
    ":cleanup_internal",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}

absl_test("cleanup_test") {
  sources = [ "cleanup_test.cc" ]
  deps = [
    ":cleanup",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/utility",
  ]
}
