# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("memory") {
  public = [ "memory.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
  ]
}

absl_test("memory_test") {
  sources = [ "memory_test.cc" ]
  deps = [
    ":memory",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}
